--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:4040", 
+  "proxy": "http://localhost:4040",
   "name": "building-store-client",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
+    "@pbe/react-yandex-maps": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
